# FacetSocial

./: Dockerfile  ScrappyOL.py  ScrappyPPS.py  ScrappyProcesadores.py  ScrappyTD.py  config.ini  config.ini.template  main.py  novedadesProcesadores.json  novedadesTD.json  ofertas.json  pasantias.json  pyproject.toml  requirements.txt
